@@ -59,6 +59,8 @@ version 2.92
 	Fix failure to cache PTR RRs when a reply contains more than one answer.
 	Thanks to Dmitry for spotting this.
 
+	Add TFTP options windowsize (RFC 7440) and timeout (RFC 2349).
+	
 	
 version 2.91
 	Fix spurious "resource limit exceeded messages". Thanks to 
